fix: font sizes and family modals not showing on phone

--- a/src/styles/DocStyles.module.css
+++ b/src/styles/DocStyles.module.css
@@ -321,4 +321,39 @@
         font-size: .7rem;
         font-weight: normal;
     }
+
+    .family_list {
+        position: absolute;
+        top: -12rem;
+        width: 100%;
+        height: 12rem;
+        max-height: 0;
+        overflow-y: scroll;
+        background-color: var(--bg);
+        box-shadow: 5px 5px 10px 10px rgba( 0, 0, 0, 0.1 );
+        z-index: 2;
+        transition: all 100ms ease;
+        scrollbar-width: thin;
+        scrollbar-face-color: var(--grey);
+    }
+    .sizes_list {
+        cursor: pointer;
+        position: absolute;
+        flex-direction: column;
+        display: flex;
+        max-height: 0;
+        top: -12rem;
+        left: 50%;
+        width: 5rem;
+        transform: translate(-50%, 0);
+        overflow-y: scroll;
+        list-style-type: none;
+        background-color: var(--bg);
+        box-shadow: 5px 5px 10px 10px rgba( 0, 0, 0, 0.1 );
+        border-radius: .5rem;
+        text-align: start;
+        transition: all 100ms ease;
+        scrollbar-width: thin;
+        scrollbar-face-color: var(--grey);
+    }    
 }
